# qobuz_android

./: .gitignore  .gitmodules  CLAUDE.md  gradlew.bat  logcat.bat  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: jni_bridge.cc  main.cc
app/src/main/java/io/nava/qobuz_test/: App.kt  LoginActivity.kt  MainActivity.kt  Prefs.kt  QobuzNative.kt  SearchAdapter.kt  SettingsActivity.kt
app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_settings.xml  item_search_result.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
qobuz_ffi/: Cargo.toml
qobuz_ffi/src/: lib.rs
