[package]
name = "qobuz_ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
qobuz-api = { path = "../streamer/qobuz-api" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.13", features = ["blocking"] }
rustls-platform-verifier = "0.7"
jni = { version = "0.22", default-features = false }
